@@ -1,27 +1,32 @@
 package com.calmomilla.api.configs;
 
 import com.calmomilla.domain.model.Jogo;
+import com.calmomilla.domain.model.Paciente;
 import com.calmomilla.domain.model.Psicologo;
 import com.calmomilla.domain.model.Usuario;
 import com.calmomilla.domain.repository.JogoRepository;
+import com.calmomilla.domain.repository.PacienteRepository;
 import com.calmomilla.domain.repository.PsicologoRepository;
 import com.calmomilla.domain.repository.UserRepository;
 import com.calmomilla.domain.utils.UserRole;
+import com.calmomilla.domain.utils.enums.Especializacoes;
 import com.calmomilla.domain.utils.enums.Focos;
 import com.calmomilla.domain.utils.enums.Genero;
 import lombok.AllArgsConstructor;
 import org.springframework.boot.CommandLineRunner;
+import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.stereotype.Component;
 
 import java.time.LocalDate;
 import java.util.Arrays;
+import java.util.List;
 
 @Component
 @AllArgsConstructor
 public class DataInitializer implements CommandLineRunner {
 
     private final JogoRepository jogoRepository;
-    private final UserRepository userRepository;
+    private final PacienteRepository pacienteRepository;
     private final PsicologoRepository psicologoRepository;
 
     @Override
@@ -49,11 +54,26 @@ public class DataInitializer implements CommandLineRunner {
         jogo3.setFoto("url_da_foto_do_quiz");
         jogo3.setAvaliacao(0);
 
-        Usuario usuario = new Usuario();
+        Paciente usuario = new Paciente();
         usuario.setNome("Admin");
         usuario.setEmail("adm@gmail.com");
         usuario.setSenha("123456");
+        var senhaUsuario = new BCryptPasswordEncoder().encode(usuario.getSenha());
+        usuario.setSenha(senhaUsuario);
         usuario.setRole(UserRole.ADMIN);
+
+        Paciente vitor = new Paciente();
+        vitor.setNome("vitor");
+        vitor.setEmail("dndragonbr@gmail.com");
+        vitor.setSenha("123456");
+        var senhaVitor = new BCryptPasswordEncoder().encode(vitor.getSenha());
+        vitor.setSenha(senhaVitor);
+        vitor.setGenero(Genero.MASCULINO);
+        vitor.setDataNasc(LocalDate.parse("2006-03-28"));
+        vitor.setCpf("52439200883");
+        vitor.setTelefone("11987492156");
+        vitor.setRole(UserRole.PACIENTE);
+        vitor.setFoto("https://lh3.googleusercontent.com/a/ACg8ocL9IDPYfcaUn1-5L9VZsxgMVlXffSES0P6PcJPCwQKnRgfSPLjl=s96-c-rg-br100");
 
         Psicologo psicologo = new Psicologo();
         psicologo.setNome("gabriel");
@@ -63,14 +83,17 @@ public class DataInitializer implements CommandLineRunner {
         psicologo.setCpf("24094280880");
         psicologo.setTelefone("119682102859");
         psicologo.setSenha("010203cd");
+        var senhaPsicologo = new BCryptPasswordEncoder().encode(psicologo.getSenha());
+        psicologo.setSenha(senhaPsicologo);
         psicologo.setFoto("https://lh3.googleusercontent.com/a/ACg8ocI0WJi3mbL6zITt7V2Ef4Pb4hEXS1mAL_ioJDtuPuDllqkGyQPc2A=s96-c");
-        psicologo.setEspecializacoes(Arrays.asList("infantil", "adulto"));
+        psicologo.setEspecializacoes(List.of(Especializacoes.PSICOLOGIA_GERAL));
         psicologo.setNumeroRegistro("4429213");
         psicologo.setRole(UserRole.PSICOLOGO);
 
 
         // Persistir os objetos usando o EntityManager
-        userRepository.save(usuario);
+        pacienteRepository.save(usuario);
+        pacienteRepository.save(vitor);
         psicologoRepository.save(psicologo);
         jogoRepository.save(jogo1);
         jogoRepository.save(jogo2);
